test_suite5/ALAN/test_suite/alan-2022-examples/failing/error247.alan
source test202
begin
    integer i, jasasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdas;
    boolean a, b, c;
    relax
end
